# 2048-game-cpp

./: CMakeLists.txt  LICENSE  README.md
src/: FINAL2048.ino  main.cpp
src/Game/: Board.cpp  Board.h  Game.cpp  Game.h
src/Input/: InputHandler.cpp  InputHandler.h
src/Render/: Renderer.cpp  Renderer.h
src/Utils/: Constants.h
